samples/_failures_safe/1761244845_cd045a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d283af46.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d283af46.c:142:22: error: expected ‘;’ at end of input
  142 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_d283af46.c:142:5: error: expected declaration or statement at end of input
  142 |     for (int i = 0; i
      |     ^~~
